--- a/sshkm/templates/sshkm/group/detail.html
+++ b/sshkm/templates/sshkm/group/detail.html
@@ -4,19 +4,16 @@
 
 {% block content %}
 {% load bootstrap3 %}
-<form action="{% url 'GroupSave' %}" method="post" class="form">
-    {% csrf_token %}
-    {% bootstrap_field groupform.name %}
-    {% bootstrap_field groupform.description set_required=False %}
-    {% bootstrap_field groupform.members set_required=False %}
-    {% if request.GET.id %}
-        <input type="hidden" name="id" value="{{ request.GET.id }}">
-    {% endif %}
-    {% buttons %}
-        <button type="submit" class="btn btn-primary">
-            Submit
-        </button>
-    {% endbuttons %}
-</form>
-
+        <form action="{% url 'GroupSave' %}" method="post" class="form">
+          {% csrf_token %}
+          {% bootstrap_field groupform.name %}
+          {% bootstrap_field groupform.description set_required=False %}
+          {% bootstrap_field groupform.members set_required=False %}
+          {% if request.GET.id %}
+          <input type="hidden" name="id" value="{{ request.GET.id }}">
+          {% endif %}
+          {% buttons %}
+            <button type="submit" class="btn btn-primary">Submit</button>
+          {% endbuttons %}
+        </form>
 {% endblock %}
