--- a/sshkm/templates/sshkm/base.html
+++ b/sshkm/templates/sshkm/base.html
@@ -68,7 +68,7 @@
     <script src="{% static "jquery/jquery.min.js" %}"></script>
     <script src="{% static "bootstrap/js/bootstrap.min.js" %}"></script>
     <script src="{% static "bootstrap-dialog/bootstrap-dialog.min.js" %}"></script>
-    <script src="{% static "dialog.js" %}"></script>
+    <script src="{% static "custom.js" %}"></script>
 
   </body>
 </html>
