--- a/sshkm/templates/sshkm/group/list.html
+++ b/sshkm/templates/sshkm/group/list.html
@@ -32,7 +32,7 @@
                           }
                         }
                       );
-                    "><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a>
+                    "><span class="glyphicon glyphicon-trash" aria-hidden="true" title="delete"></span></a>
                   </td>
                 </tr>
                 {% endfor %}
