--- a/sshkm/templates/sshkm/group/list.html
+++ b/sshkm/templates/sshkm/group/list.html
@@ -8,68 +8,48 @@
 {% if groups %}
         <form role="form" method="post" action="{% url 'GroupDelete' %}" name="deleteMultipleGroups">
           {% csrf_token %}
-            <div class="panel panel-default">
-              <table class="table">
-                <tr>
-                  <th><input type="checkbox" class="checkAll"></th>
-                  <th>Name</th>
-                  <th>&nbsp;</th>
-                </tr>
-                {% for group in groups %}
-                <tr>
-                  <td><input type="checkbox" name="id_multiple" id="{{ group.id }}" value="{{ group.id }}"></td>
-                  <td><a href="{% url 'GroupDetail' %}?id={{ group.id }}">{{ group.name }}</a></td>
-                  <td align="right">
-                    <a href="#" onclick="
-                      BootstrapDialog.confirm(
-                        {
-                          title: 'please confirm', 
-                          message: 'Are you shure you want to delete the group {{ group.name }}',
-                          callback: function(result) {
-                            if(result) {
-                              window.location.href = '{% url 'GroupDelete' %}?id={{ group.id }}';
-                            }
+          <div class="panel panel-default">
+            <table class="table">
+              <tr>
+                <th><input type="checkbox" class="checkAll"></th>
+                <th>Name</th>
+                <th>&nbsp;</th>
+              </tr>
+              {% for group in groups %}
+              <tr>
+                <td><input type="checkbox" name="id_multiple" id="{{ group.id }}" value="{{ group.id }}"></td>
+                <td><a href="{% url 'GroupDetail' %}?id={{ group.id }}">{{ group.name }}</a></td>
+                <td align="right">
+                  <a href="#" onclick="
+                    BootstrapDialog.confirm(
+                      {
+                        title: 'please confirm', 
+                        message: 'Are you shure you want to delete the group {{ group.name }}',
+                        callback: function(result) {
+                          if(result) {
+                            window.location.href = '{% url 'GroupDelete' %}?id={{ group.id }}';
                           }
                         }
-                      );
-                    "><span class="glyphicon glyphicon-trash" aria-hidden="true" title="delete"></span></a>
-                  </td>
-                </tr>
-                {% endfor %}
-              </table>
-            </div>
-           <div class="btn btn-primary" onclick="
-             var checkboxs=document.getElementsByName('id_multiple');
-             var okay=false;
-
-             for(var i=0,l=checkboxs.length;i<l;i++) {
-               if(checkboxs[i].checked) {
-                 okay=true;
-                 break;
-               }
-             }
-
-             if(okay) {
-               BootstrapDialog.confirm(
-                 {
-                   title: 'please confirm',
-                   message: 'Are you shure you want to delete selected groups(s)',
-                   callback: function(result) {
-                     if(result) {
-                       document.deleteMultipleGroups.submit();
-                     }
-                   }
-                 }
-               );
-             } else {
-               BootstrapDialog.alert(
-                 {
-                   title: 'no group(s) selected',
-                   message: 'Please select at least one group'
-                 }
-               );
-             }
-           ">Delete</div>
+                      }
+                    );
+                  "><span class="glyphicon glyphicon-trash" aria-hidden="true" title="delete"></span></a>
+                </td>
+              </tr>
+              {% endfor %}
+            </table>
+          </div>
+          <div class="btn btn-primary" onclick="
+            checkboxCheck(
+              function(){
+                document.deleteMultipleGroups.submit();
+              },
+              'id_multiple',
+              'please confirm',
+              'Are you shure you want to delete selected groups(s)',
+              'no group(s) selected',
+              'Please select at least one group'
+            )
+          ">Delete</div>
         </form>
 {% else %}
         <p>No Groups are available.</p>
