--- a/sshkm/templates/sshkm/group/detail.html
+++ b/sshkm/templates/sshkm/group/detail.html
@@ -1,6 +1,6 @@
 {% extends "sshkm/base.html" %}
 
-{% block title %}Create new Group{% endblock %}
+{% block title %}Save Group{% endblock %}
 
 {% block content %}
 {% load bootstrap3 %}
