--- a/sshkm/templates/sshkm/group/list.html
+++ b/sshkm/templates/sshkm/group/list.html
@@ -45,7 +45,7 @@
               },
               'id_multiple',
               'please confirm',
-              'Are you shure you want to delete selected groups(s)',
+              'Are you shure you want to delete selected group(s)',
               'no group(s) selected',
               'Please select at least one group'
             )
