--- a/sshkm/templates/sshkm/docs.html
+++ b/sshkm/templates/sshkm/docs.html
@@ -24,7 +24,7 @@
           Finally you want to put everthing together whith <a href="{% url 'PermissionList' %}">Permissions</a>. Here you define which <a href="{% url 'GroupList' %}">Group</a> (of <a href="{% url 'KeyList' %}">Keys</a>) should be able to connect to which <a href="{% url 'HostList' %}">Host</a> as which <a href="{% url 'OsuserList' %}">OS-User</a>.
         </p>
         <p>
-          The order in which you configure your Keys, Hosts, Groups, ... is not be fixed.
+          There is no fixed order in which you configure your Keys, Hosts, Groups, ...
         </p>
         <h2>How to start</h2>
         <h3>Upload your Master-Keys</h3>
