--- a/sshkm/templates/sshkm/base.html
+++ b/sshkm/templates/sshkm/base.html
@@ -26,7 +26,7 @@
 
   <body>
 
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -40,20 +40,20 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             {% if user.is_authenticated %}
-            {% url 'HostList' as current_url %}<li {% if current_url in request.path %} class="active"{% endif %}><a href="{{ current_url }}" title="Hosts">Hosts</a></li>
-            {% url 'GroupList' as current_url %}<li {% if current_url in request.path %} class="active"{% endif %}><a href="{{ current_url }}">Groups</a></li>
-            {% url 'KeyList' as current_url %}<li {% if current_url in request.path %} class="active"{% endif %}><a href="{{ current_url }}">Keys</a></li>
-            {% url 'OsuserList' as current_url %}<li {% if current_url in request.path %} class="active"{% endif %}><a href="{{ current_url }}">OS-Users</a></li>
-            {% url 'PermissionList' as current_url %}<li {% if current_url in request.path %} class="active"{% endif %}><a href="{{ current_url }}">Permissions</a></li>
+            {% url 'HostList' as current_url %}<li{% if current_url in request.path %} class="active"{% endif %}><a href="{{ current_url }}" title="Hosts">Hosts</a></li>
+            {% url 'GroupList' as current_url %}<li{% if current_url in request.path %} class="active"{% endif %}><a href="{{ current_url }}">Groups</a></li>
+            {% url 'KeyList' as current_url %}<li{% if current_url in request.path %} class="active"{% endif %}><a href="{{ current_url }}">Keys</a></li>
+            {% url 'OsuserList' as current_url %}<li{% if current_url in request.path %} class="active"{% endif %}><a href="{{ current_url }}">OS-Users</a></li>
+            {% url 'PermissionList' as current_url %}<li{% if current_url in request.path %} class="active"{% endif %}><a href="{{ current_url }}">Permissions</a></li>
             {% endif %}
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            {% url 'docs' as current_url %}<li {% if current_url in request.path %} class="active"{% endif %}><a href="{{ current_url }}">Docs</a></li>
+            {% url 'docs' as current_url %}<li{% if current_url in request.path %} class="active"{% endif %}><a href="{{ current_url }}">Docs</a></li>
             <li><a href="#top" title="Top">Top</a></li>
             {% if user.is_authenticated %}
             <li><a href="{% url 'logout' %}" title="Logout">Logout</a></li>
             {% if user.is_staff %}
-            {% url 'SettingsList' as current_url %}<li {% if current_url in request.path %} class="active"{% endif %}><a href="{{ current_url }}"><svg height="15" version="1.1" width="14"><path d="M14 8.77v-1.6l-1.94-.64-.45-1.09.88-1.84-1.13-1.13-1.81.91-1.09-.45-.69-1.92h-1.6l-.63 1.94-1.11.45-1.84-.88-1.13 1.13.91 1.81-.45 1.09L0 7.23v1.59l1.94.64.45 1.09-.88 1.84 1.13 1.13 1.81-.91 1.09.45.69 1.92h1.59l.63-1.94 1.11-.45 1.84.88 1.13-1.13-.92-1.81.47-1.09L14 8.75v.02zM7 11c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"></path></svg></a></li>
+            {% url 'SettingsList' as current_url %}<li{% if current_url in request.path %} class="active"{% endif %}><a href="{{ current_url }}"><svg height="15" version="1.1" width="14"><path d="M14 8.77v-1.6l-1.94-.64-.45-1.09.88-1.84-1.13-1.13-1.81.91-1.09-.45-.69-1.92h-1.6l-.63 1.94-1.11.45-1.84-.88-1.13 1.13.91 1.81-.45 1.09L0 7.23v1.59l1.94.64.45 1.09-.88 1.84 1.13 1.13 1.81-.91 1.09.45.69 1.92h1.59l.63-1.94 1.11-.45 1.84.88 1.13-1.13-.92-1.81.47-1.09L14 8.75v.02zM7 11c-1.66 0-3-1.34-3-3s1.34-3 3-3 3 1.34 3 3-1.34 3-3 3z"></path></svg></a></li>
             {% endif %}
             {% endif %}
           </ul>
