--- a/sshkm/templates/sshkm/group/detail.html
+++ b/sshkm/templates/sshkm/group/detail.html
@@ -13,7 +13,7 @@
           <input type="hidden" name="id" value="{{ request.GET.id }}">
           {% endif %}
           {% buttons %}
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-default">Submit</button>
           {% endbuttons %}
         </form>
 {% if permissions %}
