--- a/sshkm/templates/sshkm/host/list.html
+++ b/sshkm/templates/sshkm/host/list.html
@@ -3,7 +3,7 @@
 {% block title %}Hosts{% endblock %}
 
 {% block content %}
-        <a class="btn btn-primary pull-right" href="{% url 'HostDetail' %}">New</a>
+        <a class="btn btn-default pull-right" href="{% url 'HostDetail' %}">New</a>
         <br><br>
 {% if hostsstati %}
         <form role="form" method="post" action="{% url 'HostDelete' %}" name="MultipleHosts">
@@ -28,6 +28,7 @@
                       {
                         title: 'please confirm',
                         message: 'Are you shure you want to delete the host {{ hoststatus.name }}',
+                        btnOKClass: 'btn-default',
                         callback: function(result) {
                           if(result) {
                             window.location.href = '{% url 'HostDelete' %}?id={{ hoststatus.id }}';
@@ -43,6 +44,7 @@
                       {
                         title: 'please confirm',
                         message: 'Are you shure you want to deploy the host {{ hoststatus.name }}',
+                        btnOKClass: 'btn-default',
                         callback: function(result) {
                           if(result) {
                             window.location.href = '{% url 'HostDeploy' %}?id={{ hoststatus.id }}';
@@ -56,7 +58,7 @@
               {% endfor %}
             </table>
           </div>
-          <div class="btn btn-primary" onclick="
+          <div class="btn btn-default" onclick="
             checkboxCheck(
               function(){
                 document.MultipleHosts.submit();
@@ -68,7 +70,7 @@
               'Please select at least one host'
             )
           ">Delete</div>
-          <div class="btn btn-primary" onclick="
+          <div class="btn btn-default" onclick="
             checkboxCheck(
               function(){
                 document.MultipleHosts.action = '{% url 'HostDeploy' %}';
