--- a/sshkm/templates/sshkm/key/detail.html
+++ b/sshkm/templates/sshkm/key/detail.html
@@ -17,7 +17,7 @@
           <input type="hidden" name="id" value="{{ request.GET.id }}">
           {% endif %}
           {% buttons %}
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-default">Submit</button>
           {% endbuttons %}
         </form>
 {% endblock %}
