--- a/sshkm/templates/sshkm/login.html
+++ b/sshkm/templates/sshkm/login.html
@@ -7,6 +7,6 @@
           <input type="text" id="username" name="username" class="form-control" placeholder="Username" required autofocus>
           <label for="inputPassword" class="sr-only">Password</label>
           <input type="password" id="password" name="password" class="form-control" placeholder="Password" required>
-          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+          <button class="btn btn-lg btn-default btn-block" type="submit">Sign in</button>
         </form>
 {% endblock %}
