--- a/sshkm/templates/sshkm/osuser/list.html
+++ b/sshkm/templates/sshkm/osuser/list.html
@@ -3,7 +3,7 @@
 {% block title %}Osusers{% endblock %}
 
 {% block content %}
-        <a class="btn btn-primary pull-right" href="{% url 'OsuserDetail' %}">New</a>
+        <a class="btn btn-default pull-right" href="{% url 'OsuserDetail' %}">New</a>
         <br><br>
 {% if osusers %}
         <form role="form" method="post" action="{% url 'OsuserDelete' %}" name="deleteMultipleOsusers">
@@ -25,6 +25,7 @@
                       {
                         title: 'please confirm',
                         message: 'Are you shure you want to delete the osuser {{ osuser.name }}',
+                        btnOKClass: 'btn-default',
                         callback: function(result) {
                           if(result) {
                             window.location.href = '{% url 'OsuserDelete' %}?id={{ osuser.id }}';
@@ -38,7 +39,7 @@
               {% endfor %}
             </table>
           </div>
-          <div class="btn btn-primary" onclick="
+          <div class="btn btn-default" onclick="
             checkboxCheck(
               function(){
                 document.deleteMultipleOsusers.submit();
