--- a/sshkm/templates/sshkm/permission/create.html
+++ b/sshkm/templates/sshkm/permission/create.html
@@ -10,7 +10,7 @@
           {% bootstrap_field permissionform.group set_required=False %}
           {% bootstrap_field permissionform.osuser set_required=False %}
           {% buttons %}
-          <button type="submit" class="btn btn-primary">Submit</button>
+          <button type="submit" class="btn btn-default">Submit</button>
           {% endbuttons %}
         </form>
 {% endblock %}
