--- a/sshkm/templates/sshkm/host/detail.html
+++ b/sshkm/templates/sshkm/host/detail.html
@@ -20,7 +20,7 @@
        <br>
        <h4>Permissions for this host</h4>
        <div class="panel panel-default">
-         <table class="table">
+         <table class="table table-striped table-hover">
             <tr>
               <th>Group</th>
               <th>OS-User</th>
