--- a/sshkm/templates/sshkm/osuser/list.html
+++ b/sshkm/templates/sshkm/osuser/list.html
@@ -9,7 +9,7 @@
         <form role="form" method="post" action="{% url 'OsuserDelete' %}" name="deleteMultipleOsusers">
           {% csrf_token %}
           <div class="panel panel-default">
-            <table class="table">
+            <table class="table table-striped table-hover">
               <tr>
                 <th><input type="checkbox" class="checkAll"></th>
                 <th>Name</th>
