--- a/sshkm/templates/sshkm/settings/list.html
+++ b/sshkm/templates/sshkm/settings/list.html
@@ -93,7 +93,7 @@
         <form role="form" method="post" action="{% url 'DeleteUser' %}" name="deleteMultipleUsers">
           {% csrf_token %}
           <div class="panel panel-default">
-            <table class="table">
+            <table class="table table-striped table-hover">
               <tr>
                 <th><input type="checkbox" class="checkAll"></th>
                 <th>Username</th>
