--- a/sshkm/templates/sshkm/permission/list.html
+++ b/sshkm/templates/sshkm/permission/list.html
@@ -55,7 +55,25 @@
               'Please select at least one permission'
             )
           ">Delete</div>
+          {% if permissions.has_other_pages %}
+          <div align="center">
+            <ul class="pagination">
+              {% if permissions.has_previous %}
+              <li><a href="?page={{ permissions.previous_page_number }}">&laquo;</a></li>
+              {% else %}
+              <li class="disabled"><span>&laquo;</span></li>
+              {% endif %}
+              <li class="active"><span>Page {{ permissions.number }} of {{ permissions.paginator.num_pages }}</span></li>
+              {% if permissions.has_next %}
+              <li><a href="?page={{ permissions.next_page_number }}">&raquo;</a></li>
+              {% else %}
+              <li class="disabled"><span>&raquo;</span></li>
+              {% endif %}
+            </ul>
+          </div>
+          {% endif %}
         </form>
+
 {% else %}
         <p>No Permissions are available.</p>
 {% endif %}
