--- a/sshkm/static/custom.css
+++ b/sshkm/static/custom.css
@@ -82,6 +82,17 @@ a, a.hover, a.focus, a:hover, a:focus {
   border-color: #ddd;
 }
 
+.form-control:focus {
+  border-color: #000000;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(142, 142, 142, .6);
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(142, 142, 142, .6);
+}
+
+select[multiple] option:checked {
+  background: #222222 linear-gradient(0deg, #222222 0%, #222222 100%);
+}
+
 /* adapt svg images */
 svg {
   fill: currentColor;
